turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:16: error: ')' expected but '}' found.
} else {
^LangtonsAnt:20: error: ')' expected but '}' found.
}
^